--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 spring:
   application:
     name: newslinebot
-
-news-api:
-  api-key: ${NEWS_API_KEY}
+huggingface:
+  api-key: ${HUGGINGFACE_API_KEY}
